--- a/bin/main/static/css/list.css
+++ b/bin/main/static/css/list.css
@@ -138,3 +138,29 @@
   padding: 16px 0;
   text-align: right;
 }
+
+/*Modalのcss*/
+.p-profile-app_skill .custom-modal-content {
+  width: 640px;
+  padding: 50px 0;
+  background-color: #fff;
+  border-radius: 0;
+  box-shadow: none;
+  border: none;
+}
+.p-profile-app_skill .modal-message-custom {
+  margin-inline: auto;
+  max-width: 251px;
+  width: fit-content;
+  text-align: left;
+  font-size: var(--fs-3);
+  font-weight: bold;
+  color: var(--font-color);
+  border: none;
+  margin-bottom: 40px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+.p-profile-app_skill .custom-modal-bg {
+  background-color: rgba(0, 0, 0, 0.25);
+}
