--- a/src/main/resources/templates/common/head.html
+++ b/src/main/resources/templates/common/head.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <!--Bootstrap/CSS-->
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
     <!--共通CSS-->
     <link rel="stylesheet" href="/css/common.css" />
@@ -23,6 +25,7 @@
     <link rel="stylesheet" href="/css/add.css" />
     <link rel="stylesheet" href="/css/edit.css" />
     <link rel="stylesheet" href="/css/list.css" />
+    <link rel="stylesheet" href="/css/learning_new.css" />
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,10 +36,12 @@
     <!--各ページ別JS-->
     <script src="/js/fileUpload.js" defer></script>
     <script src="/js/pullDown.js" defer></script>
+    <script src="/js/modal.js" defer></script>
     <!--Bootstrap/JS-->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
     ></script>
   </head>
 </html>
