--- a/bin/main/templates/layout/layout.html
+++ b/bin/main/templates/layout/layout.html
@@ -19,5 +19,11 @@
 
     <main th:insert="~{::content}"></main>
     <footer th:replace="~{common/footer :: footer}"></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <th:block layout:fragment="script"></th:block>
   </body>
 </html>
