--- a/bin/main/templates/layout/layout.html
+++ b/bin/main/templates/layout/layout.html
@@ -24,6 +24,7 @@
       xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <th:block layout:fragment="script"></th:block>
   </body>
 </html>
