[fix] 編集ページのエラー表示の対応、カテゴリー内の項目を全て削除時の対応 ・エラー表示：クリックイベントで宣言されていない変数を使用していた為、URLSearchParamsを使用する仕様に変更 ・LearningDataController内のdisplayLearningDataListを修正。ループ処理の変更と項目がない場合はメッセージが表示される仕様に変更

--- a/bin/main/static/css/list.css
+++ b/bin/main/static/css/list.css
@@ -156,6 +156,13 @@
   text-align: right;
 }
 
+/*項目データがない場合のメッセージ*/
+.p-profile-app_skill .zero-data-message {
+  text-align: center;
+  padding: 20px;
+  color: var(--font-color);
+}
+
 /*Validationのcss*/
 .p-profile-app_skill .validation-error-text {
   width: 160px;
